BE-87, fix : JDK version misconfiguration